--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -227,7 +227,7 @@
   animation: float 6s ease-in-out infinite;
 }
 
-.main.chat-empty .navbar-title {
+.main.chat-empty .navbar-text {
   opacity: 0;
   width: 0;
   overflow: hidden;
