--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -13,6 +13,7 @@
   flex: 1;
   display: flex;
   align-items: center;
+  margin-top: 3rem;
   justify-content: center;
   flex-direction: column;
   padding-bottom: 20px;
