--- a/src/components/ChatInput/ChatInput.css
+++ b/src/components/ChatInput/ChatInput.css
@@ -141,6 +141,13 @@
   .dropdown {
     left: 16px;
   }
+  .nested-dropdown {
+    left: auto;
+    right: 0;
+    margin-left: 0;
+    box-shadow: -4px 4px 16px rgba(0, 0, 0, 0.6);
+    border: 1px solid #3f3f46;
+  }
 }
 
 .file-preview-container {
