--- a/src/components/Apps/Apps.css
+++ b/src/components/Apps/Apps.css
@@ -156,6 +156,10 @@
 .app-card-image {
   width: 50px;
   height: 50px;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 8px;
   object-fit: cover;
 }
